v1.19/reference/cli/index.md
# CLI Reference

Complete reference for the PromptScript command-line interface.

## Installation

```bash
npm install -g @promptscript/cli
```

```bash
pnpm add -g @promptscript/cli
```

```bash
yarn global add @promptscript/cli
```

## Global Options

These options are available for all commands:

| Option          | Description                            |
| --------------- | -------------------------------------- |
| `-h, --help`    | Display help information               |
| `-V, --version` | Display version number                 |
| `--verbose`     | Enable verbose output                  |
| `--debug`       | Enable debug output (includes verbose) |
| `--quiet`       | Suppress non-error output              |

## Commands

### prs telemetry

Inspect or change user-level anonymous telemetry settings.

```bash
prs telemetry status
prs telemetry enable
prs telemetry disable
```

`status` displays the effective setting, active vetoes, collector endpoint, queued record count, spool size, and latest delivery status. `enable` and `disable` update `~/.promptscript/config.yaml` atomically while preserving YAML comments.

Project config, `DO_NOT_TRACK`, and `PROMPTSCRIPT_TELEMETRY=false` remain hard vetoes even after `prs telemetry enable`. Telemetry management commands do not create telemetry events. See [Anonymous Usage Telemetry](https://getpromptscript.dev/v1.19/reference/telemetry/index.md).

### prs init

Initialize PromptScript in the current directory.

```bash
prs init [options]
```

**Options:**

| Option                   | Description                                                     |
| ------------------------ | --------------------------------------------------------------- |
| `-n, --name <name>`      | Project name (auto-detected from package.json, etc.)            |
| `-t, --team <team>`      | Team namespace for organization                                 |
| `--inherit <path>`       | Inheritance path (e.g., `@company/team`)                        |
| `--registry <path>`      | Registry path for shared configurations                         |
| `--targets <targets...>` | Target AI tools (github, claude, cursor, opencode, gemini, ...) |
| `-i, --interactive`      | Force interactive mode with prompts                             |
| `-y, --yes`              | Skip prompts, use defaults                                      |
| `-f, --force`            | Force reinitialize even if already initialized                  |
| `--auto-import`          | Statically import detected instruction files                    |
| `--backup`               | Back up generated files before replacing them                   |
| `--dry-run`              | Preview every planned file without writing                      |
| `--no-hooks`             | Skip automatic hook installation                                |
| `-m, --migrate`          | Deprecated migration flag; use interactive `prs init`           |

**Examples:**

```bash
# Interactive initialization (default)
prs init

# Non-interactive initialization with explicit targets
prs init -y --targets claude factory

# Initialize with custom project name
prs init --name my-project

# Initialize for a specific team with inheritance
prs init --team frontend --inherit @frontend/team

# Initialize with specific targets only
prs init --targets github claude

# Initialize and select detected files for static import
prs init --auto-import

# Preview initialization
prs init -y --targets claude --dry-run

# Full non-interactive setup
prs init -y -n my-project --inherit @company/team --targets github claude
```

**Auto-detection:**

The `init` command automatically detects:

- **Project name** from `package.json`, `pyproject.toml`, `Cargo.toml`, or `go.mod`
- **Languages** (TypeScript, Python, Rust, Go, etc.)
- **Frameworks** (React, Next.js, Django, FastAPI, etc.)
- **Existing AI tools** from dedicated configuration files and directories
- **Prettier configuration** (`.prettierrc`, `.prettierrc.json`, `.prettierrc.yaml`, `.prettierrc.yml`)

Detection never treats `.github/` or `AGENTS.md` alone as proof that a specific AI tool is in use. Detected tools are preselected in interactive mode. Other registered targets remain available but unchecked. `prs init --yes` requires `--targets`, detected tools, or targets configured in user defaults. It never invents GitHub, Claude, or Cursor defaults.

`--interactive` and `--yes` are mutually exclusive. When `--team` is provided (or configured as a user default for `--yes`), its value is written to the generated `@meta.team` field.

**Prettier Integration:**

If a Prettier configuration file is detected:

- Displays: `Prettier config detected: .prettierrc`
- Adds `formatting: { prettier: true }` to enable auto-detection during compilation
- Output formatting will respect your project's Prettier settings (tabWidth, proseWrap, printWidth)

If no Prettier configuration is found:

- Displays: `No Prettier config found`
- Adds default formatting options: `formatting: { tabWidth: 2, proseWrap: preserve }`

**Created Files:**

- `promptscript.yaml` - Minimal, comment-free compiler configuration
- `.promptscript/project.prs` - Main instructions file
- `.promptscript/skills/promptscript/SKILL.md` - Canonical language skill
- Native skill copies for explicitly selected targets that support skills
- Hook settings for selected targets, unless `--no-hooks` or `--dry-run` is used

When interactive `prs init` uses AI-assisted migration, it copies the migration prompt to the clipboard and shows the next steps: start the AI agent, paste the prompt, let it migrate the instructions, review the generated files, then validate and compile. If clipboard copying fails, the prompt is printed in the terminal for manual copying.

Initialization performs conflict checks before writing. User-owned files are not overwritten unless `--force` or `--backup` explicitly authorizes replacement. Writes use temporary files and rollback completed writes after failures.

______________________________________________________________________

### prs migrate

Migrate existing AI instructions to PromptScript.

```bash
prs migrate [options]
```

| Option                   | Description                                         |
| ------------------------ | --------------------------------------------------- |
| `--static`               | Statically import all detected files                |
| `--llm`                  | Generate an AI-assisted migration prompt            |
| `--files <files...>`     | Migrate only the listed instruction files           |
| `--targets <targets...>` | Targets when migration also initializes the project |
| `--backup`               | Back up files that will be updated                  |
| `--force`                | Overwrite conflicting migration outputs             |
| `--dry-run`              | Preview migration without writing                   |

```bash
prs migrate
prs migrate --static
prs migrate --llm --files CLAUDE.md AGENTS.md
prs migrate --static --dry-run
```

`prs migrate` prompts for static or AI-assisted migration. `--static` and `--llm` select a non-interactive strategy and cannot be combined.

For an initialized project:

- `promptscript.yaml` remains byte-for-byte unchanged.
- Static output is written under `.promptscript/migrated/`.
- Every effective top-level or build-profile entry gains one idempotent `@use` for the migrated project.
- AI-assisted mode writes `.promptscript/migration-prompt.md` and installs the PromptScript skill.
- Existing instruction files remain unchanged.
- No hooks are installed.

No detected candidates means success with zero writes. An empty interactive selection cancels successfully with zero writes. Unknown `--files`, unreadable inputs, or conflicting outputs fail before any project file is changed. Human-readable output uses stderr. Explicit `--llm` writes the generated prompt to stdout for shell pipelines.

### prs upgrade

Upgrade `.prs` files under `.promptscript/` to the latest supported syntax version. The command parses every discovered file before writing, so parse errors, malformed versions, and versions newer than the installed CLI abort the upgrade before any file changes. Symbolic links are skipped.

```bash
prs upgrade [--dry-run]
```

Use `--dry-run` to preview changes without writing files. Each normal file write uses atomic replacement and preserves file permissions.

### prs hooks

Install or uninstall PromptScript integrations for supported AI tools.

```bash
prs hooks <install|uninstall> [tool]
```

Omit `[tool]` to operate on all detected tools. `--all` makes that auto-detected behavior explicit. Supported tool names are `claude`, `gemini`, `copilot`, `cursor`, `windsurf`, `factory`, and `cline`.

```bash
prs hooks install
prs hooks install claude
prs hooks uninstall cursor
```

Installed integrations run compilation after supported AI tool edit events and protect generated files from direct tool writes. Use `prs compile --watch` for changes from a general-purpose editor.

______________________________________________________________________

### prs compile

Compile PromptScript to target formats.

```bash
prs compile [options]
```

**Options:**

| Option                       | Description                                             |
| ---------------------------- | ------------------------------------------------------- |
| `-b, --build <name>`         | Compile a named build profile from config               |
| `--all-builds`               | Compile all named build profiles in deterministic order |
| `-t, --target <target>`      | Compile to specific target                              |
| `-f, --format <format>`      | Output format (alias for `--target`)                    |
| `-a, --all`                  | Compile to all configured targets                       |
| `-w, --watch`                | Watch mode for continuous compilation                   |
| `-o, --output <dir>`         | Override output directory                               |
| `--resources <items>`        | Compile only selected resources (see below)             |
| `--dry-run`                  | Preview changes without writing                         |
| `--no-migrate-factory-hooks` | Warn instead of migrating legacy Factory settings hooks |
| `--registry <path>`          | Override the configured registry path                   |
| `-c, --config <path>`        | Path to config file                                     |
| `--force`                    | Force overwrite existing files without prompts          |
| `--strict`                   | Treat output path conflicts as errors                   |
| `--ignore-hashes`            | Skip reference integrity hash verification              |
| `--cwd <dir>`                | Set the project working directory                       |
| `--verbose`                  | Show detailed compilation progress                      |
| `--debug`                    | Show debug information (includes verbose)               |

`--all-builds` and `--build` are mutually exclusive. `--all-builds` compiles every named profile in `config.builds` in sorted key order, reports failures per profile, and uses one watcher for the full build set when combined with `--watch`.

Compilation fails with exit code 1 when the run resolves zero targets: `config.targets` is missing or empty, the selected build profile lists no targets, or every matching target is `enabled: false`. The error names the config key to change and, for builds-only projects, lists the profiles that can be compiled with `--build` or `--all-builds`.

Paths passed through `--config`, `--registry`, and `--output` are resolved relative to `--cwd` (or the current project directory). Watch mode honors the configured `watch.include`, `watch.exclude`, `watch.debounce`, and `watch.clearScreen` settings. Added, changed, and removed matching files all trigger compilation, and rebuilds are serialized.

Watch mode also tracks resolved dependencies - imported files, local skills, and the loaded configuration - even when they sit outside `watch.include`. The dependency set is refreshed after every rebuild: newly resolved files start being watched, and files that are no longer dependencies stop being watched unless `watch.include` covers them explicitly. Removing an `@use` therefore stops rebuilds triggered by the dropped file, and adding one starts them without a restart.

The `output.overwrite` setting provides the configuration equivalent of `--force`. A configured `output.header` is added to generated Markdown after PromptScript metadata (and after YAML frontmatter when present) so generated-file detection and frontmatter remain valid.

In non-interactive mode without `--force`, `prs compile` preflights every planned output for ownership and overwrite conflicts. One conflicting user-owned file aborts that complete write set, so earlier outputs are not partially updated. Interactive mode processes outputs in order and prompts on conflicts, so accepted earlier writes can remain when a later path is skipped. Use `--dry-run` to inspect the full plan. Use `--force` or `output.overwrite: true` only after reviewing every conflicting path.

Before anything is written, every enabled target contributes its files to a single output plan, so two targets that resolve to the same path are reconciled once instead of racing on disk:

- Identical content and write settings are merged silently and reported only under `--debug`.
- Differing content reports `PS4001`. A formatter output replaces an earlier one; a resource or the auto-injected PromptScript skill preserves the file that is already planned, so a hand-written skill always wins over the bundled one.
- Paths are compared case-insensitively and Unicode-normalized (NFC) on every platform, so `.agents/skills/Review/SKILL.md` and `.agents/skills/review/SKILL.md` collide on Linux too, and the plan stays identical across macOS, Windows, and Linux.

`--strict` is a separate and earlier check: it fails the run when two configured targets declare the same main output path, before any compilation happens.

When compiling the Factory target and `.factory/hooks.json` is absent, `prs compile` migrates unambiguous hooks from `.factory/settings.json` before writing generated output. `--dry-run` reports the planned canonical and legacy file changes without writing. `--no-migrate-factory-hooks` keeps the legacy file unchanged and reports `PS4002` instead. Unknown events, malformed entries, and mixed ownership abort migration without a partial write.

`--resources <items>` compiles only the named resource kinds: `agents`, `skills`, `commands`, `mcp`, `hooks`, `plugins`, and `main`. Multiple kinds are comma-separated and the flag overrides `output.resources` in the config. A selection without `main` omits root instruction files (and rule, workflow, and local-memory outputs), so a global install can generate only `.claude/agents/`, `.factory/droids/`, or skill directories. Resource-only runs skip managed cleanup, because cleanup would classify every unselected file as obsolete; run a full compile to prune stale generated files. Writing into the home directory without a resource selection prints a warning, and protected personal files such as `~/.factory/AGENTS.md` are refused outright.

**Examples:**

```bash
# Compile all targets (default)
prs compile

# Compile specific target
prs compile --target github
prs compile --target claude
prs compile --target cursor

# Using --format (alias for --target)
prs compile --format github
prs compile -f claude

# Compile all named build profiles
prs compile --all-builds

# Watch mode
prs compile --watch

# Preview changes
prs compile --dry-run

# Install only agents and skills into a global output root
prs compile --output "$HOME" --resources agents,skills

# Compile a named build profile
prs compile --build logstrip-factory

# Custom config
prs compile --config ./custom.config.yaml

# Verbose output (shows pipeline stages, files, timing)
prs compile --verbose

# Debug output (includes AST details, cache info, validation rules)
prs compile --debug
```

Automatic compilation with hooks

Instead of running `prs compile --watch` in a terminal, you can let your AI tool trigger compilation automatically. Run `prs hooks install` once to wire `prs compile` into your tool's native hook system — no manual watch process needed. See the [Hooks Guide](https://getpromptscript.dev/v1.19/guides/hooks/index.md) for details.

**Common Targets:**

| Target        | Output File                       | Description        |
| ------------- | --------------------------------- | ------------------ |
| `github`      | `.github/copilot-instructions.md` | GitHub Copilot     |
| `claude`      | `CLAUDE.md`                       | Claude Code        |
| `cursor`      | `.cursor/rules/project.mdc`       | Cursor (modern)    |
| `antigravity` | `.agent/rules/project.md`         | Google Antigravity |
| `opencode`    | `OPENCODE.md`                     | OpenCode           |
| `gemini`      | `GEMINI.md`                       | Gemini CLI         |
| `factory`     | `AGENTS.md`                       | Factory AI         |

See [Target Platforms](https://getpromptscript.dev/v1.19/features/target-platforms/index.md) for all 50 built-in targets.

### prs build

Compile a named build profile from `promptscript.yaml`.

```bash
prs build <name> [options]
```

This is a shortcut for:

```bash
prs compile --build <name>
```

Build profiles are useful when a project needs extra generated artifacts for a subpackage, plugin, or library folder.

```yaml
builds:
  logstrip-factory:
    entry: .promptscript/project.prs
    output: plugins/logstrip
    targets:
      - factory:
          version: multifile
          skillBaseDir: skills
          includeSkills:
            - logstrip
```

```bash
prs build logstrip-factory
```

The command accepts the applicable compile options from `prs compile`, including `--target`, `--format`, `--output`, `--resources`, `--dry-run`, `--config`, `--force`, `--strict`, `--ignore-hashes`, `--registry`, `--watch`, and `--cwd`.

______________________________________________________________________

### prs validate

Validate PromptScript files.

```bash
prs validate [options] [files...]
```

**Options:**

| Option              | Description                                 |
| ------------------- | ------------------------------------------- |
| `--strict`          | Treat warnings as errors                    |
| `--format <format>` | Output format (text, json)                  |
| `--fix`             | Auto-fix syntax version issues              |
| `--skip-policies`   | Skip extension compliance policy evaluation |
| `--ignore-hashes`   | Skip reference integrity hash verification  |

**Examples:**

```bash
# Validate current project
prs validate

# Validate with strict mode
prs validate --strict

# Validate specific files
prs validate .promptscript/project.prs

# JSON output for CI
prs validate --format json
```

**Exit Codes:**

| Code | Meaning                                   |
| ---- | ----------------------------------------- |
| 0    | Validation passed                         |
| 1    | Validation errors found                   |
| 2    | Validation warnings found (with --strict) |

______________________________________________________________________

### prs inspect

Inspect how skill composition layers contribute to the final resolved skill. Shows per-property provenance (default) or per-layer breakdown.

```bash
prs inspect <skill-name> [options]
```

**Arguments:**

| Argument       | Description                  |
| -------------- | ---------------------------- |
| `<skill-name>` | Name of the skill to inspect |

**Options:**

| Option                | Description                       |
| --------------------- | --------------------------------- |
| `--layers`            | Show layer-level breakdown        |
| `--format <format>`   | Output format (text, json)        |
| `-c, --config <path>` | Path to custom config file        |
| `--cwd <dir>`         | Set the project working directory |

**Examples:**

```bash
# Show per-property provenance (default)
prs inspect code-review

# Show layer-level breakdown
prs inspect code-review --layers

# JSON output for tooling
prs inspect code-review --format json
```

### prs explain

Explain source and composition provenance for any resolved block, field, nested value, list entry, or text fragment.

```bash
prs explain <path> [options]
```

**Arguments:**

| Argument | Description                                          |
| -------- | ---------------------------------------------------- |
| `<path>` | Resolved path such as `standards.code.frameworks[0]` |

**Options:**

| Option                | Description                       |
| --------------------- | --------------------------------- |
| `--format <format>`   | Output format (text, json)        |
| `-c, --config <path>` | Path to custom config file        |
| `--cwd <dir>`         | Set the project working directory |
| `--absolute-paths`    | Include absolute filesystem paths |

```bash
prs explain standards.code.frameworks[0]
prs explain identity.text[0] --format json
```

Text and JSON output use paths relative to the project root by default. Use `--absolute-paths` only when consumers require host filesystem paths.

JSON output has this shape:

```json
{
  "version": 1,
  "path": "standards.code.frameworks[1]",
  "entries": [
    {
      "path": "standards.code.frameworks[1]",
      "kind": "list",
      "source": { "file": ".promptscript/project.prs", "line": 15, "column": 18 },
      "history": [
        {
          "operation": "declaration",
          "action": "selected",
          "source": { "file": ".promptscript/project.prs", "line": 15, "column": 18 },
          "chain": []
        },
        {
          "operation": "extend",
          "action": "appended",
          "source": { "file": ".promptscript/project.prs", "line": 15, "column": 18 },
          "strategy": "merge",
          "target": "standards",
          "chain": []
        }
      ],
      "value": "Vue"
    }
  ],
  "diagnostics": []
}
```

Each entry reports `kind` as `block`, `field`, `value`, `list`, `text`, or `inline-use`, and `history` lists the operations that produced the final value in application order:

| Field       | Description                                                                                 |
| ----------- | ------------------------------------------------------------------------------------------- |
| `operation` | `declaration`, `inherit`, `use`, `extend`, `override`, `compose`, or `generated`            |
| `action`    | `declared`, `selected`, `merged`, `appended`, `replaced`, `removed`, or `composed`          |
| `source`    | Location of the statement that performed the operation                                      |
| `strategy`  | Merge strategy applied to this value, such as `merge`, `append`, or `replace`               |
| `target`    | Resolved target of the operation, such as the extended block or the imported file           |
| `reference` | Reference as written in the source, such as `./context` or `@company/platform`              |
| `alias`     | Namespace alias from `@use <reference> as <alias>`                                          |
| `chain`     | Import links traversed to reach the source, outermost first                                 |
| `trace`     | Nested provenance of a composed value, such as a skill body pulled in by a composition step |

`prs explain` exits with status 0 when the path resolves and diagnostics are warnings only. It exits nonzero for a missing path, configuration failure, resolution failure, or any fatal partial-resolution diagnostic.

______________________________________________________________________

### prs diff

Show diff for compiled output.

```bash
prs diff [options]
```

**Options:**

| Option                  | Description                       |
| ----------------------- | --------------------------------- |
| `-b, --build <name>`    | Show diff for named build profile |
| `-t, --target <target>` | Show diff for specific target     |
| `--format <format>`     | Output format (`text`, `json`)    |
| `-a, --all`             | Show diff for all targets         |
| `--full`                | Show full diff without truncation |
| `--include-content`     | Include canonical content in JSON |
| `--no-pager`            | Disable pager output              |
| `--color`               | Force colored output              |
| `--no-color`            | Disable colored output            |

**Examples:**

```bash
# Show all diffs
prs diff --all

# Show diff for specific target
prs diff --target github

# Show diff for a named build profile
prs diff --build docs

# Emit a machine-readable report with hashes
prs diff --format json

# Include canonical generated content in the report
prs diff --format json --include-content
```

JSON reports use the versioned [diff schema](https://getpromptscript.dev/schema/diff/v1.json). Content is omitted by default; each output change includes a deterministic `sha256-<hex>` hash after generation markers are removed. Change entries include target, output path, source provenance, change kind, ownership, and target compatibility warnings. `unsupported` repeats unsupported entries from `changes` for direct automation. `success: false` with `errors` means compilation or report generation failed; `success: true` with `hasChanges: true` is a valid diff report. The command exits 1 for errors and 0 for valid reports, including reports with changes.

Generated output paths use `builds.<name>.output` for `--build`, with `output.baseDir` as the fallback. The JSON report uses the same formatter output, configured header, and Prettier post-format pass as `prs compile`; `prs diff` uses the complete configured target for `--target`, including version, convention, output path, and skill settings. It never writes generated files, registry checkouts, cache metadata, lockfiles, or temporary files. Git registries must already be available through vendor mode or a valid local cache; otherwise diff fails with an actionable error instead of fetching them.

______________________________________________________________________

### prs pull

Pull updates from registry. Supports local, HTTP, and Git registries.

```bash
prs pull [options]
```

**Options:**

| Option                | Description                                |
| --------------------- | ------------------------------------------ |
| `-f, --force`         | Force overwrite local changes              |
| `--dry-run`           | Preview changes without pulling            |
| `-b, --branch <name>` | Git branch to pull from (overrides config) |
| `--tag <name>`        | Git tag to pull from                       |
| `--commit <hash>`     | Git commit to pull from                    |
| `--refresh`           | Force re-clone, ignore cache               |

**Examples:**

```bash
# Pull registry updates
prs pull

# Force overwrite
prs pull --force

# Preview changes
prs pull --dry-run

# Pull from specific Git branch
prs pull --branch develop

# Pull from specific Git tag
prs pull --tag v1.0.0

# Pull from specific commit
prs pull --commit abc123

# Force fresh clone (ignore cache)
prs pull --refresh
```

Git Registry Options

The `--branch`, `--tag`, and `--commit` options are mutually exclusive. These options and `--refresh` only apply to Git registries. For local or HTTP registries, these options are ignored.

______________________________________________________________________

### prs check

Check the effective configuration, every top-level or build-profile entry file, lockfile, registry, imports, inheritance, and PromptScript validation without generating output. Configuration and validation warnings do not fail the command, while health-check errors exit with status 1.

```bash
prs check [options]
```

**Examples:**

```bash
# Check project health
prs check
```

______________________________________________________________________

### prs serve

Start a local development server that connects the [online playground](https://getpromptscript.dev/playground/) to your local `.prs` files.

```bash
prs serve [options]
```

**Options:**

| Option                   | Description                                | Default                       |
| ------------------------ | ------------------------------------------ | ----------------------------- |
| `-p, --port <port>`      | Port to listen on (`1` to `65535`)         | `3000`                        |
| `--host <host>`          | Host to bind to                            | `127.0.0.1`                   |
| `--read-only`            | Disable file modifications from playground | `false`                       |
| `--cors-origin <origin>` | Allowed CORS origin                        | `https://getpromptscript.dev` |

**Examples:**

```bash
# Start server with defaults (localhost:3000)
prs serve

# Custom port
prs serve --port 8080

# Expose on all interfaces (e.g. Docker, remote access)
prs serve --host 0.0.0.0

# Read-only mode (safe for shared environments)
prs serve --read-only
```

**How it works:**

1. Run `prs serve` in your project directory
1. The CLI prints a playground URL: `https://getpromptscript.dev/playground/?server=127.0.0.1:3000`
1. Open the URL - the playground loads your local `.prs` files
1. Edit in the playground or your editor - changes sync both ways via WebSocket
1. The playground reads your `promptscript.yaml` and applies your project configuration (enabled targets, formatting settings)

**File discovery:** The server scans only the source directory (`.promptscript/` by default, or the directory from `input.entry` in your `promptscript.yaml`) and config files - not the entire repository.

**API endpoints** (used by the playground):

| Endpoint       | Method              | Description                                               |
| -------------- | ------------------- | --------------------------------------------------------- |
| `/api/health`  | GET                 | Health check                                              |
| `/api/config`  | GET                 | Server config and project settings from promptscript.yaml |
| `/api/files`   | GET                 | List `.prs` and config files                              |
| `/api/files/*` | GET/PUT/POST/DELETE | Read, update, create, delete files                        |
| `/ws`          | WebSocket           | Real-time file change events                              |

Privacy

All compilation happens locally in your browser - no data is sent to any external server. The `prs serve` command only serves files to the playground running in your browser.

Security

The server only accepts requests from `https://getpromptscript.dev` by default (CORS). Use `--cors-origin` to allow other origins. Use `--read-only` to prevent file modifications.

______________________________________________________________________

### prs import

Import an existing AI instruction file to PromptScript format.

```bash
prs import <file> [options]
```

**Options:**

| Option                  | Description                                     | Default         |
| ----------------------- | ----------------------------------------------- | --------------- |
| `-f, --format <format>` | Source format (claude, github, cursor, generic) | Auto-detected   |
| `-o, --output <dir>`    | Output directory                                | `.promptscript` |
| `--dry-run`             | Preview output without writing files            |                 |
| `--validate`            | Run roundtrip validation after import           |                 |
| `--force`               | Overwrite an existing `imported.prs` output     |                 |

**Examples:**

```bash
# Import a CLAUDE.md file (format auto-detected)
prs import CLAUDE.md

# Import with explicit format
prs import .github/copilot-instructions.md --format github

# Preview without writing
prs import CLAUDE.md --dry-run

# Import and validate roundtrip fidelity
prs import CLAUDE.md --validate

# Import to custom output directory
prs import CLAUDE.md --output ./my-prompts
```

The command refuses to replace an existing `imported.prs` unless `--force` is provided.

______________________________________________________________________

### prs registry

Manage PromptScript registries. This command group contains subcommands for creating, validating, and publishing registries.

#### prs registry init

Create a new PromptScript registry.

```bash
prs registry init [directory] [options]
```

**Options:**

| Option                     | Description                             |
| -------------------------- | --------------------------------------- |
| `-n, --name <name>`        | Registry name                           |
| `-d, --description <desc>` | Registry description                    |
| `--namespaces <ns...>`     | Namespace names (e.g., `@core @stacks`) |
| `-y, --yes`                | Non-interactive mode with defaults      |
| `-o, --output <dir>`       | Output directory                        |
| `--no-seed`                | Skip seed configurations                |
| `-f, --force`              | Overwrite existing registry files       |

**Examples:**

```bash
# Interactive registry creation (default)
prs registry init

# Create with defaults (non-interactive)
prs registry init -y

# Create with custom name and namespaces
prs registry init --name my-registry --namespaces @core @stacks @fragments

# Create in a specific directory
prs registry init ./my-registry

# Skip seed configurations
prs registry init --no-seed
```

#### prs registry validate

Validate registry structure and manifest.

```bash
prs registry validate [path] [options]
```

**Options:**

| Option              | Description                |
| ------------------- | -------------------------- |
| `--strict`          | Treat warnings as errors   |
| `--format <format>` | Output format (text, json) |

**Examples:**

```bash
# Validate registry in current directory
prs registry validate

# Validate specific registry path
prs registry validate ./my-registry

# Strict mode (warnings become errors)
prs registry validate --strict

# JSON output for CI
prs registry validate --format json
```

#### prs registry publish

Publish registry to remote.

```bash
prs registry publish [path] [options]
```

**Options:**

| Option                | Description                     |
| --------------------- | ------------------------------- |
| `--dry-run`           | Preview what would be published |
| `-f, --force`         | Skip validation                 |
| `-m, --message <msg>` | Git commit message              |
| `--tag <tag>`         | Git tag for release             |

**Examples:**

```bash
# Publish registry in current directory
prs registry publish

# Preview what would be published
prs registry publish --dry-run

# Publish with custom commit message
prs registry publish --message "feat: add new stack configs"

# Publish with a release tag
prs registry publish --tag v1.0.0

# Skip validation before publishing
prs registry publish --force
```

The registry path must be the root of its Git repository. Dry runs do not modify the manifest or Git working tree.

#### prs registry list

List configured registry alias mappings, showing the merged project and global user result.

```bash
prs registry list [options]
```

**Options:**

| Option              | Description                                       |
| ------------------- | ------------------------------------------------- |
| `--source <source>` | Show aliases from `all`, `project`, or `global`   |
| `--format <format>` | Output format (`text` or `json`, default: `text`) |

**Examples:**

```bash
# Show all resolved aliases
prs registry list

# Show only project-level aliases
prs registry list --source project

# JSON output
prs registry list --format json
```

**Example output:**

```text
  @company  →  github.com/acme/promptscript-base  (project)
  @team     →  github.com/acme/team-frontend      (project)
  @shared   →  github.com/acme/shared-libs        (global)
```

#### prs registry add

Add a registry alias to the project or user config.

```bash
prs registry add <alias> <url> [options]
```

**Arguments:**

| Argument  | Description                               |
| --------- | ----------------------------------------- |
| `<alias>` | Alias name, e.g. `@company`               |
| `<url>`   | Git host path, e.g. `github.com/org/repo` |

**Options:**

| Option     | Description                                                                  |
| ---------- | ---------------------------------------------------------------------------- |
| `--global` | Add to user config (`~/.promptscript/config.yaml`) instead of project config |

**Examples:**

```bash
# Add alias to project config
prs registry add @company github.com/acme/promptscript-base

# Add alias to user config (available across all projects)
prs registry add @company github.com/acme/promptscript-base --global
```

______________________________________________________________________

### prs lock

Generate or update the `promptscript.lock` lockfile. The lockfile records the exact resolved commit for every remote import, enabling reproducible builds.

```bash
prs lock [options]
```

**Options:**

| Option      | Description                                    |
| ----------- | ---------------------------------------------- |
| `--dry-run` | Show what would change without writing         |
| `--update`  | Re-resolve remote commits even when pins exist |

**Examples:**

```bash
# Create or update lockfile
prs lock

# Preview changes without writing
prs lock --dry-run
```

`prs lock` fails without writing when a remote dependency cannot be resolved. Commit `promptscript.lock` to version control.

______________________________________________________________________

### prs update

Update one or all remote dependencies to their latest allowed versions and refresh the lockfile.

```bash
prs update [package] [options]
```

**Arguments:**

| Argument    | Description                                                                  |
| ----------- | ---------------------------------------------------------------------------- |
| `[package]` | Specific package to update, e.g. `github.com/acme/base`. Omit to update all. |

**Options:**

| Option      | Description                     |
| ----------- | ------------------------------- |
| `--dry-run` | Preview updates without writing |

**Examples:**

```bash
# Update all dependencies
prs update

# Update a specific package
prs update github.com/acme/promptscript-base

# Preview updates
prs update --dry-run
```

______________________________________________________________________

### prs skills

Manage markdown-imported skills. See the [Markdown Imports guide](https://getpromptscript.dev/v1.19/guides/markdown-imports/index.md) for full details.

#### prs skills add

Add a remote or local skill to the project. Inserts a `@use` directive into the entry `.prs` file. Remote sources are also pinned in `promptscript.lock`; local sources are not (there is no commit to pin).

```bash
prs skills add <source> [options]
```

**Arguments:**

| Argument   | Description                                                                                     |
| ---------- | ----------------------------------------------------------------------------------------------- |
| `<source>` | Remote skill path (e.g., `github.com/anthropics/skills/commit@1.0.0`) or local path (see below) |

**Options:**

| Option              | Description                                                                                 |
| ------------------- | ------------------------------------------------------------------------------------------- |
| `-f, --file <file>` | Target `.prs` file to modify                                                                |
| `--dry-run`         | Preview changes without writing                                                             |
| `--skip-validation` | Skip SKILL.md frontmatter validation (not recommended; useful when the upstream is in flux) |
| `--strict`          | Treat validation warnings as errors                                                         |
| `--copy`            | Local sources: copy into `.promptscript/skills/` instead of referencing in place            |
| `--force`           | Local sources: replace an already-installed skill with the same name                        |

**Local sources:**

A source is treated as local when it starts with `./`, `../`, `~`, or an absolute path, or when a bare relative path exists on disk. The source may be a skill directory (containing `SKILL.md`) or a `SKILL.md` file itself.

- The SKILL.md frontmatter is validated with the same rules as remote skills.
- Without `--copy`, the skill is referenced where it lies and nothing is moved. The source must be inside the project root (relative `@use` imports cannot escape it), and the computed path must only use characters the language allows. Sources outside the root or with characters like spaces must use `--copy`.
- With `--copy`, the directory is copied into `.promptscript/skills/<name>/` (following symlinks) and referenced there. Use `--force` to replace an existing skill with the same name.
- Local skills get no `promptscript.lock` entry: there is no commit to pin, and compile only requires lock entries for remote imports.

**Validation:**

Before writing project files, `prs skills add` clones the target ref into a temporary directory, recomputes a real `sha256` integrity hash, and runs the [Agent Skills spec](https://agentskills.io/specification) validator against the SKILL.md frontmatter. Every Git operation, including semver lookup, `ls-remote`, commit probes, cloning, and checkout, has a 60-second hard timeout. A timeout fails with the repository URL and network troubleshooting guidance. Local sources skip the clone: the on-disk SKILL.md is validated directly.

- `name` present, ≤64 chars, matches `^[a-z0-9]+(-[a-z0-9]+)*$`, and equals the parent directory basename
- `name` does not collide with another already-installed skill
- `description` present, ≤1024 chars (warns if shorter than 40 chars or missing a "when/use" hint)
- `compatibility` ≤500 chars
- `license` present (warning)
- `allowed-tools` tokens follow `Tool` or `Tool(scope:pattern)` (warning)
- Body length sanity check (warning at >500 lines)
- Markdown references stay inside the skill directory and resolve to existing files

Plain `http://` sources are rejected to prevent MITM. Use `https://`, `git@`, or `github.com/...` form. The fetched commit's integrity hash is written to `promptscript.lock`. For SSH input, the lockfile retains the SSH clone URL so later skill updates do not require HTTPS access. `--skip-validation` skips only SKILL.md frontmatter checks. Remote access, cloning, commit pinning, file existence checks, and integrity hashing still run. The `.prs` file and lockfile are written transactionally from the command user's perspective. If the lockfile write fails after the `.prs` file changes, the original contents are restored when the lockfile still contains the command's update. Concurrent lockfile changes are left untouched and reported as rollback conflicts. If restoration also fails, the error reports the rollback failure. Concurrent runs are serialized through a `.promptscript-skills-add.lock` file in the project root. A second run fails fast instead of interleaving writes. A lock is reclaimed when its owning process is gone or when it is older than 30 minutes, so a recycled process ID cannot block the command permanently. Add `.promptscript-skills-add.lock` to `.gitignore`.

**Examples:**

```bash
# Add a versioned skill
prs skills add github.com/anthropics/skills/commit@1.0.0

# Add a skill directory (auto-discovers SKILL.md)
prs skills add github.com/repo/skills/gitnexus

# Add from an SSH-only repository
prs skills add git@github.com:org/repo.git/skills/private-tool

# Add to a specific .prs file
prs skills add github.com/anthropics/skills/commit@1.0.0 --file .promptscript/team.prs

# Preview what would change
prs skills add github.com/anthropics/skills/commit@1.0.0 --dry-run

# Fail on validation warnings (CI mode)
prs skills add github.com/anthropics/skills/commit@1.0.0 --strict

# Bypass validation (use sparingly)
prs skills add github.com/anthropics/skills/commit@1.0.0 --skip-validation

# Add a local skill directory, referencing it where it lies
prs skills add ./vendor/my-skill

# Install a local skill (e.g. a CI artifact) into .promptscript/skills/
prs skills add ~/Downloads/skills/my-skill --copy

# Replace an already-installed skill with the same name
prs skills add ~/Downloads/skills/my-skill --copy --force
```

#### prs skills remove

Remove a skill from the project. Removes the matching `@use` line and its lock entry. Partial names must match exactly one imported skill. For a local skill installed with `--copy`, the directory under `.promptscript/skills/` is left in place - delete it manually if the skill is no longer needed.

```bash
prs skills remove <name> [options]
```

**Arguments:**

| Argument | Description                                               |
| -------- | --------------------------------------------------------- |
| `<name>` | Skill name or path fragment to match against `@use` lines |

**Options:**

| Option      | Description                     |
| ----------- | ------------------------------- |
| `--dry-run` | Preview changes without writing |

**Examples:**

```bash
# Remove by full path
prs skills remove github.com/anthropics/skills/commit@1.0.0

# Remove by partial match
prs skills remove commit

# Preview removal
prs skills remove commit --dry-run
```

#### prs skills list

List all skills imported in the current project via `@use` directives.

```bash
prs skills list
```

**Examples:**

```bash
# Show all imported skills
prs skills list
```

#### prs skills update

Update lock entries for markdown-sourced skills. Re-resolves each requested ref to an exact commit and refreshes its integrity hash.

```bash
prs skills update [name] [options]
```

**Arguments:**

| Argument | Description                                                   |
| -------- | ------------------------------------------------------------- |
| `[name]` | Specific skill to update (partial match). Omit to update all. |

**Options:**

| Option              | Description                             |
| ------------------- | --------------------------------------- |
| `--dry-run`         | Preview changes without writing         |
| `--skip-validation` | Skip SKILL.md frontmatter re-validation |
| `--strict`          | Treat validation warnings as errors     |

Each updated entry is re-cloned, re-hashed (real `sha256` integrity) and re-validated against the Agent Skills spec - see [`prs skills add`](#prs-skills-add) for the full validator rules. Entries that cannot be resolved or fail validation are skipped with a reason, and the command exits with status 1.

**Examples:**

```bash
# Update all markdown-sourced skills
prs skills update

# Update a specific skill
prs skills update github.com/anthropics/skills/commit

# Preview updates
prs skills update --dry-run

# Refuse to refresh entries with new warnings
prs skills update --strict
```

______________________________________________________________________

### prs vendor

Manage the vendor directory for offline builds. Vendor mode copies all lockfile-resolved dependencies into `.promptscript/vendor/`.

#### prs vendor sync

Download exact lockfile dependencies into the vendor directory.

```bash
prs vendor sync
```

Sync fails if any locked commit cannot be downloaded. After syncing, compilation uses the vendored files and makes no network requests for locked remote imports.

Tracked symbolic links must resolve to tracked regular files inside the same repository and outside retained Git metadata. Broken, external, directory, and retargeted symbolic links fail verification.

Vendor commands reject a symbolic link or filesystem escape in the `.promptscript/` parent before reading, replacing, or cleaning vendor content.

#### prs vendor check

Verify that the vendor directory matches the current lockfile.

```bash
prs vendor check
```

Exits with code 1 if vendor is out of sync. Use in CI before compiling:

```bash
prs vendor check && prs compile
```

______________________________________________________________________

### prs resolve

Show how an import resolves locally without making network requests. The command reports its repository, lockfile pin, vendor or cache source, and resolved path.

```bash
prs resolve <import> [options]
```

**Arguments:**

| Argument   | Description                                                                          |
| ---------- | ------------------------------------------------------------------------------------ |
| `<import>` | Import path to resolve, e.g. `@company/security` or `github.com/acme/base/@org/base` |

**Options:**

| Option              | Description                |
| ------------------- | -------------------------- |
| `--format <format>` | Output format (text, json) |

**Examples:**

```bash
# Resolve an aliased import
prs resolve @company/security

# Resolve a URL import
prs resolve github.com/acme/promptscript-base/@org/base

# JSON output for tooling
prs resolve @company/security --format json
```

**Example output:**

```text
  Import:   @company/security
  Type:     native .prs
  Alias:    @company
  Repo:     github.com/acme/promptscript-base
  Path:     security
  Version:  v1.3.0
  Commit:   a3f8c2d9f6e5b4a32100123456789abcdef01234
  Source:   vendor
  Location: /workspace/.promptscript/vendor/github.com/acme/promptscript-base/security.prs
  Exists:   yes
```

______________________________________________________________________

### prs update-check

Check npm for CLI updates, bypassing the automatic check's 24-hour cache. Network errors and malformed registry responses exit with status 1. Set `PROMPTSCRIPT_NO_UPDATE_CHECK` to disable the request.

```bash
prs update-check
```

**Examples:**

```bash
# Check if a newer version is available
prs update-check
```

______________________________________________________________________

## Configuration File

The CLI uses `promptscript.yaml` by default. Override with `--config`:

```yaml
id: my-project
syntax: '1.4.0'

input:
  entry: .promptscript/project.prs

targets:
  - github
  - claude
```

See the [Configuration Reference](https://getpromptscript.dev/v1.19/reference/config/index.md) for every field, default, and advanced option (registry, builds, validation, watch, formatting, customConventions, universalDir). The JSON schema is the source of truth: <https://getpromptscript.dev/latest/schema/config.json>.

## Environment Variables

| Variable                        | Description                                 |
| ------------------------------- | ------------------------------------------- |
| `PROMPTSCRIPT_CONFIG`           | Path to config file                         |
| `PROMPTSCRIPT_REGISTRY`         | Registry path or URL                        |
| `PROMPTSCRIPT_REGISTRY_GIT_URL` | Git registry URL (HTTPS or SSH)             |
| `PROMPTSCRIPT_REGISTRY_GIT_REF` | Git ref (branch, tag, or commit)            |
| `PROMPTSCRIPT_GIT_TIMEOUT`      | Git operation timeout in ms (default 60000) |
| `PROMPTSCRIPT_VERBOSE`          | Enable verbose output (`1` or `true`)       |
| `PROMPTSCRIPT_DEBUG`            | Enable debug output (`1` or `true`)         |
| `NO_COLOR`                      | Disable colored output                      |

## Exit Codes

| Code | Meaning                 |
| ---- | ----------------------- |
| 0    | Success                 |
| 1    | Error occurred          |
| 2    | Warning (with --strict) |
| 130  | Interrupted (Ctrl+C)    |

## Troubleshooting

### Common Issues

**Config file not found:**

```bash
Error: Configuration file not found
```

Run `prs init` to create a configuration file.

**Registry not accessible:**

```bash
Error: Cannot access registry at ./registry
```

Ensure the registry path exists or configure a valid remote URL.

**Invalid PromptScript syntax:**

```bash
Error: Parse error at line 10
```

Check your `.prs` file syntax. Use `prs validate` for detailed errors.

### Debug Mode

Enable verbose output to see compilation progress:

```bash
prs compile --verbose
# or
PROMPTSCRIPT_VERBOSE=1 prs compile
```

For maximum detail (AST info, cache hits, validation rules), use debug mode:

```bash
prs compile --debug
# or
PROMPTSCRIPT_DEBUG=1 prs compile
```

**Verbose output shows:**

- Pipeline stages (Resolve, Validate, Format)
- Files being parsed and resolved
- Import and inheritance resolution paths
- Per-stage timing

**Debug output additionally shows:**

- AST node counts
- Cache hits and stores
- Individual validation rules being executed
- Formatter conventions used
